[package]
name = "threaded"
version = "0.2.0"
authors = ["Gregory Langlais <general@gregorylanglais.com>"]
edition = "2018"
description = "Minimalist Thread Pool"
license = "MIT"
readme = "README.md"
repository = "https://github.com/gregl83/threaded"
homepage = "https://crates.io/crates/threaded"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossbeam = "0.8.0"
uuid = { version = "0.8.2", features = ["serde", "v4"] }